--- a/foundations/intro-to-css/02-class-id-selectors/index.html
+++ b/foundations/intro-to-css/02-class-id-selectors/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <p id="style">Number 1 - I'm a class!</p>
-    <div>Number 2 - I'm one ID.</div>
-    <p id="name">Number 3 - I'm a class, but cooler!</p>
-    <div id="title">Number 4 - I'm another ID.</div>
-    <p id="style">Number 5 - I'm a class!</p>
+    <p class="contents">Number 1 - I'm a class!</p>
+    <div id="name">Number 2 - I'm one ID.</div>
+    <p class="contents third">Number 3 - I'm a class, but cooler!</p>
+    <div id="fourth">Number 4 - I'm another ID.</div>
+    <p class="contents">Number 5 - I'm a class!</p>
   </body>
 </html>
